@@ -1,18 +1,18 @@
 package com.forgather.domain.space.model;
 
-import java.text.BreakIterator;
 import java.util.Objects;
+import java.util.regex.Pattern;
 
 import com.forgather.domain.model.BaseTimeEntity;
 import com.forgather.global.exception.BaseException;
+import com.forgather.global.exception.BaseNullPointerException;
+import com.forgather.global.util.TextLengthCounter;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
-import jakarta.persistence.PrePersist;
-import jakarta.persistence.PreUpdate;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -27,6 +27,10 @@ public class Space extends BaseTimeEntity {
     private static final int MAX_DESCRIPTION_LENGTH = 200;
     private static final int MAX_INSTAGRAM_USERNAME_LENGTH = 30;
     private static final int MAX_EMAIL_LENGTH = 50;
+    private static final Pattern EMAIL_PATTERN = Pattern.compile(
+        "^[a-zA-Z0-9_+&*-]+(?:\\.[a-zA-Z0-9_+&*-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,63}$"
+    );
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
@@ -37,144 +41,129 @@ public class Space extends BaseTimeEntity {
     @Column(name = "name", nullable = false)
     private String name;
 
-    @Column(name = "description")
+    @Column(name = "description", nullable = false)
     private String description;
 
     @Column(name = "is_public", nullable = false)
     private boolean isPublic = false;
 
-    @Column(name = "instagram_username")
+    @Column(name = "instagram_username", nullable = false)
     private String instagramUsername;
 
-    @Column(name = "email")
+    @Column(name = "email", nullable = false)
     private String email;
 
+    /**
+     * 스페이스를 생성한다.
+     *
+     * @param code              스페이스 코드 (필수, 10자)
+     * @param name              스페이스 이름 (필수, 최대 15자)
+     * @param description       스페이스 설명 (필수, 최대 200자)
+     * @param isPublic          스페이스 공개 여부 (필수)
+     * @param instagramUsername 인스타그램 아이디 (필수, 최대 30자)
+     * @param email             이메일 (필수, 최대 50자)
+     */
     public Space(String code, String name, String description, boolean isPublic, String instagramUsername,
         String email) {
-        validate(code, name, description, instagramUsername, email);
+        validateRequiredFields(code, name, description, instagramUsername, email);
+        validateCode(code);
+        validateName(name);
+        validateDescription(description);
+        validateInstagramUsername(instagramUsername);
+        validateEmail(email);
         this.code = code;
         this.name = name;
-        this.description = description;
+        this.description = convertBlankToEmptyString(description);
         this.isPublic = isPublic;
-        this.instagramUsername = instagramUsername;
-        this.email = email;
+        this.instagramUsername = convertBlankToEmptyString(instagramUsername);
+        this.email = convertBlankToEmptyString(email);
+    }
+
+    private void validateRequiredFields(String code, String name, String description, String instagramUsername,
+        String email) {
+        if (code == null) {
+            throw new BaseNullPointerException("스페이스 코드는 null일 수 없습니다.");
+        }
+        if (name == null) {
+            throw new BaseNullPointerException("스페이스 이름은 null일 수 없습니다.");
+        }
+        if (description == null) {
+            throw new BaseNullPointerException("스페이스 설명은 null일 수 없습니다.");
+        }
+        if (instagramUsername == null) {
+            throw new BaseNullPointerException("인스타그램 아이디는 null일 수 없습니다.");
+        }
+        if (email == null) {
+            throw new BaseNullPointerException("이메일은 null일 수 없습니다.");
+        }
     }
 
     public void update(String name, String description, Boolean isPublic, String instagramUsername, String email) {
         if (name != null) {
-            setName(name);
+            validateName(name);
+            this.name = name;
         }
         if (description != null) {
-            setDescription(description);
+            validateDescription(description);
+            this.description = description;
         }
         if (instagramUsername != null) {
-            setInstagramUsername(instagramUsername);
+            validateInstagramUsername(instagramUsername);
+            this.instagramUsername = instagramUsername;
         }
         if (isPublic != null) {
             this.isPublic = isPublic;
         }
         if (email != null) {
-            setEmail(email);
+            validateEmail(email);
+            this.email = email;
         }
     }
 
-    private void setName(String name) {
-        if (name == null || name.isBlank()) {
-            throw new BaseException("스페이스 이름은 비어있을 수 없습니다." + name);
+    private void validateCode(String code) {
+        if (code.length() != CODE_LENGTH) {
+            throw new BaseException("스페이스 코드는 %d자여야 합니다.".formatted(CODE_LENGTH));
         }
-        if (getCharacterCount(name) > MAX_NAME_LENGTH) {
-            throw new BaseException(String.format("스페이스 이름은 최대 %d자까지 가능합니다. 생성 시도 이름: %s", MAX_NAME_LENGTH, name));
-        }
-        this.name = name;
     }
 
-    private void setDescription(String description) {
-        if (getCharacterCount(description) > MAX_DESCRIPTION_LENGTH) {
-            throw new BaseException(String.format(
-                "스페이스 설명은 최대 %d자까지 가능합니다. 생성 시도 설명: %s", MAX_DESCRIPTION_LENGTH, description)
-            );
+    private void validateName(String name) {
+        if (name.isBlank()) {
+            throw new BaseException("스페이스 이름은 공백만 입력할 수 없습니다.");
         }
-        this.description = description;
+        if (TextLengthCounter.count(name) > MAX_NAME_LENGTH) {
+            throw new BaseException("스페이스 이름은 최대 %d자까지 가능합니다.".formatted(MAX_NAME_LENGTH));
+        }
     }
 
-    private void setInstagramUsername(String instagramUsername) {
+    private void validateDescription(String description) {
+        if (TextLengthCounter.count(description) > MAX_DESCRIPTION_LENGTH) {
+            throw new BaseException("스페이스 설명은 최대 %d자까지 가능합니다.".formatted(MAX_DESCRIPTION_LENGTH));
+        }
+    }
+
+    private void validateInstagramUsername(String instagramUsername) {
         if (instagramUsername.length() > MAX_INSTAGRAM_USERNAME_LENGTH) {
-            throw new BaseException(String.format(
-                "인스타그램 아이디는 최대 %d자까지 가능합니다. 생성 시도 아이디: %s", MAX_INSTAGRAM_USERNAME_LENGTH, instagramUsername)
-            );
+            throw new BaseException("인스타그램 아이디는 최대 %d자까지 가능합니다.".formatted(MAX_INSTAGRAM_USERNAME_LENGTH));
         }
-        this.instagramUsername = instagramUsername;
     }
 
-    private void setEmail(String email) {
+    private void validateEmail(String email) {
+        if (email.isBlank()) {
+            return;
+        }
         if (email.length() > MAX_EMAIL_LENGTH) {
-            throw new BaseException(String.format("이메일은 최대 %d자까지 가능합니다. 생성 시도 이메일: %s", MAX_EMAIL_LENGTH, email));
+            throw new BaseException("이메일은 최대 %d자까지 가능합니다.".formatted(MAX_EMAIL_LENGTH));
         }
-        this.email = email;
-    }
-
-    private void validate(String code, String name, String description, String instagramUsername, String email) {
-        if (code == null || code.length() != CODE_LENGTH) {
-            throw new BaseException("스페이스 코드는 10자리여야 합니다. 생성 시도 코드: " + code);
-        }
-        if (name == null || name.isBlank() || getCharacterCount(name) > MAX_NAME_LENGTH) {
-            throw new BaseException("스페이스 이름은 비어있을 수 없고, 최대 15자여야 합니다. 생성 시도 이름: " + name);
-        }
-        if (description != null && getCharacterCount(description) > MAX_DESCRIPTION_LENGTH) {
-            throw new BaseException(String.format(
-                "스페이스 설명은 최대 %d자까지 가능합니다. 생성 시도 설명: %s", MAX_DESCRIPTION_LENGTH, description)
-            );
-        }
-        if (instagramUsername != null && instagramUsername.length() > MAX_INSTAGRAM_USERNAME_LENGTH) {
-            throw new BaseException(String.format(
-                "인스타그램 아이디는 최대 %d자까지 가능합니다. 생성 시도 아이디: %s", MAX_INSTAGRAM_USERNAME_LENGTH, instagramUsername)
-            );
-        }
-        if (email != null && email.length() > MAX_EMAIL_LENGTH) {
-            throw new BaseException(String.format("이메일은 최대 %d자까지 가능합니다. 생성 시도 이메일: %s", MAX_EMAIL_LENGTH, email));
+        if (!EMAIL_PATTERN.matcher(email).matches()) {
+            throw new BaseException("이메일 형식이 올바르지 않습니다.");
         }
     }
 
-    @PrePersist
-    @PreUpdate
-    private void validateBeforeSave() {
-        if (code == null || code.isBlank()) {
-            throw new BaseException("스페이스 코드는 비어있을 수 없습니다. 생성 시도 코드: " + code);
+    private String convertBlankToEmptyString(String string) {
+        if (string.isBlank()) {
+            return "";
         }
-        if (name == null || name.isBlank()) {
-            throw new BaseException("스페이스 이름은 비어있을 수 없습니다. 생성 시도 이름: " + name);
-        }
-        if (getCharacterCount(name) > MAX_NAME_LENGTH) {
-            throw new BaseException(String.format("스페이스 이름은 %d자를 초과할 수 없습니다. 생성 시도 이름: %s", MAX_NAME_LENGTH, name));
-        }
-        if (description != null && getCharacterCount(description) > MAX_DESCRIPTION_LENGTH) {
-            throw new BaseException(String.format(
-                "스페이스 설명은 최대 %d자까지 가능합니다. 생성 시도 설명: %s", MAX_DESCRIPTION_LENGTH, description)
-            );
-        }
-        if (instagramUsername != null && instagramUsername.length() > MAX_INSTAGRAM_USERNAME_LENGTH) {
-            throw new BaseException(String.format(
-                "인스타그램 아이디는 최대 %d자까지 가능합니다. 생성 시도 아이디: %s", MAX_INSTAGRAM_USERNAME_LENGTH, instagramUsername)
-            );
-        }
-        if (email != null && email.length() > MAX_EMAIL_LENGTH) {
-            throw new BaseException(String.format("이메일은 최대 %d자까지 가능합니다. 생성 시도 이메일: %s", MAX_EMAIL_LENGTH, email));
-        }
-    }
-
-    // 이모지의 길이를 1로 처리
-    private int getCharacterCount(String text) {
-        BreakIterator iterator = BreakIterator.getCharacterInstance();
-        iterator.setText(text);
-        int count = 0;
-        while (iterator.next() != BreakIterator.DONE) {
-            count++;
-        }
-        return count;
-    }
-
-    public boolean isPublic() {
-        return this.isPublic;
+        return string;
     }
 
     @Override
